--- a/site_media/css/base_template.css
+++ b/site_media/css/base_template.css
@@ -97,4 +97,20 @@ input {
 	background-color: #6699FF;
 }
 
-table td {padding: 10px; font-size: 20px}
+table {
+	border: 1px solid #c0c0c0;
+}
+
+table td {
+	padding: 5px 8px;
+	font-size: 14px;
+	text-align: center;
+}
+
+table th {
+	padding: 5px 30px;
+	font-size: 18px;
+	background-color: #f4f4f4;
+	border: 1px solid #990033;
+	color: #990033;
+}
